# GenericAgent

./: .gitignore  agent_loop.py  agentmain.py  commit_signature.py  ga.py  llmcore.py  mykey_template.py
frontends/tuiapp_v4/: Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_R4.md  IMPLEMENTATION_PLAN_R5.md  IMPLEMENTATION_PLAN_R6.md  README.md  checklist.md  query.md  redesign_cc.md
frontends/tuiapp_v4/recon/round4/: M1_render_fidelity.md  M2_spinner_footer.md  M3_turnN_scroll_parity.md  M4_commands.md  R1_tui_v3_render.md  R2_bridge_protocol.md  R3_failure_diagnosis.md  R4_footer_spinner_fx.md  R5_cc_codex_ref.md  R6_at_continue.md
frontends/tuiapp_v4/recon/round5/: R1_mouse.md  R2_markdown.md  R3_blankgap.md  R4_spinner_cost.md  R5_emoji.md  R6_sticky_parity.md
frontends/tuiapp_v4/recon/round6/: R1_audit.md  R2_reference.md
frontends/tuiapp_v4/scripts/: echo_bridge.py  ga_bridge.py
frontends/tuiapp_v4/src/: app_event.rs  clipboard.rs  main.rs  term.rs
frontends/tuiapp_v4/src/app/: effort.rs  fold_hit.rs  mod.rs  multi.rs  overlay_ops.rs  reducer.rs  session.rs  tests.rs  types.rs
frontends/tuiapp_v4/src/bridge/: mod.rs  protocol.rs
frontends/tuiapp_v4/src/commands/: dispatch.rs  mod.rs  registry.rs
frontends/tuiapp_v4/src/components/: continue_picker.rs  dashboard.rs  effects_paint.rs  mod.rs  overlay.rs  picker.rs  scheduler.rs  text.rs
frontends/tuiapp_v4/src/effects/: fire.rs  lightning.rs  mod.rs  shimmer.rs  snow.rs  sparkle.rs
frontends/tuiapp_v4/src/flavor/: mod.rs
frontends/tuiapp_v4/tests/: bridge_liveness.rs
(+65 files in other folders)
