[package]
name = "tui_v4"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
